--- a/templates/paiements/quittance_paiement_bailleur.html
+++ b/templates/paiements/quittance_paiement_bailleur.html
@@ -328,12 +328,12 @@
         
         <!-- Section principale de la quittance -->
         <div class="quittance-main">
-            <div class="quittance-title">QUITTANCE DE PAIEMENT</div>
+            <div class="quittance-title">RÉCÉPISSÉ DE PAIEMENT</div>
             
             <div class="quittance-details">
                 <div class="quittance-left">
                     <div class="detail-row">
-                        <span class="detail-label">QUITTANCE N°:</span>
+                        <span class="detail-label">RÉCÉPISSÉ N°:</span>
                         <span class="detail-value">{{ quittance.numero_quittance }}</span>
                     </div>
                     <div class="detail-row">
