--- a/templates/paiements/paiement_detail.html
+++ b/templates/paiements/paiement_detail.html
@@ -516,14 +516,11 @@
                         {% if paiement.statut == 'valide' %}
                         <div class="text-center">
                             <div class="d-flex gap-2 justify-content-center flex-wrap">
-                                <a href="{% url 'paiements:generer_quittance_kbis_dynamique' paiement.pk %}" class="btn btn-success">
-                                    <i class="bi bi-file-earmark-text me-2"></i>Générer quittance KBIS dynamique
+                                <a href="{% url 'paiements:generer_quittance_manuelle' paiement.pk %}" class="btn btn-success">
+                                    <i class="bi bi-file-earmark-text me-2"></i>Générer quittance KBIS
                                 </a>
                                 <a href="{% url 'paiements:generer_recu_kbis_dynamique' paiement.pk %}" class="btn btn-info">
                                     <i class="bi bi-receipt me-2"></i>Générer récépissé KBIS
-                                </a>
-                                <a href="{% url 'paiements:generer_quittance_manuelle' paiement.pk %}" class="btn-generer-quittance">
-                                    <i class="bi bi-plus-circle me-2"></i>Générer quittance classique
                                 </a>
                             </div>
                         </div>
@@ -605,7 +602,7 @@
         {% endif %}
         
         {% if paiement.statut == 'valide' %}
-        <a href="{% url 'paiements:generer_quittance_kbis_dynamique' paiement.pk %}" class="btn-action btn-primary">
+        <a href="{% url 'paiements:generer_quittance_manuelle' paiement.pk %}" class="btn-action btn-primary">
             <i class="bi bi-file-earmark-text me-2"></i>Générer Quittance
         </a>
         <a href="{% url 'paiements:generer_recu_kbis_dynamique' paiement.pk %}" class="btn-action btn-info">
